# Messy-File-Cleaner

./: .gitignore  CMakeLists.txt  CMakeLists_Instruction.md  Makefile  Makefile_Instruction.md  README.MD  README.md  add_headers.py  archetech_must_be.md  config.json  create_files  create_files.c  gprof.txt  next.txt  perf.data
.devcontainer/: Dockerfile  devcontainer.json  on-create.sh  post-create.sh
configs/: default.conf
docs/: Arch Linux Setup in GitHub Codespaces.md  HLD.md  How to use.md  LLD.md  REPOSITORY AND STRUCTER.md  architecture.md  designs.md
include/classifier/: classifier.h
include/cleaner/core/: organizer.h  processor.h  renamer.h  scanner.h
include/cleaner/platform/: atomic.h  filesystem.h  mutex.h  threads.h  time.h
include/cleaner/system/: logger.h  metrics.h  threadpool.h
include/config/: config.h
include/core/: context.h  event.h  lf_queue.h  pipeline.h  queue.h  thread_pool.h
include/journal/: journal.h
include/mover/: mover.h
include/resolver/: resolver.h
include/scanner/: scanner.h
include/utils/: fs_utils.h  hashmap.h  limits.h  string.h
include/watcher/: watcher.h
src/: main.c
src/classifier/: classifier.c
src/cli/: main.c
src/collision/: collision.c  collision.h
src/config/: config.c  config.h
src/core/: event.c  lf_queue.c  organizer.c  pipeline.c  processor.c  queue.c  renamer.c  scanner.c  thread_pool.c
src/journal/: journal.c
src/logging/: logger.c  logger.h
src/mover/: mover.c
src/platform/filesystem/: filesystem_posix.c  filesystem_win.c
src/platform/sync/: atomic_posix.c  atomic_win.c  mutex_posix.c  mutex_win.c
src/platform/threads/: threads_posix.c  threads_win.c
src/platform/time/: time_posix.c  time_win.c
src/resolver/: resolver.c
src/scanner/: scanner.c
src/system/: logger.c  metrics.c  threadpool.c
src/utils/: fs_utils.c  hashmap.c  string.c
src/watcher/: watcher.c
tests/: CMakeLists.txt  test_scanner.c
tests/integration/: test_pipeline.c
tests/unit/: test_hashmap.c  test_queue.c
